<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/authFragmentLayout"
    style="@style/MatchParent"
    android:backgroundTint="@color/grey_100"
    tools:context="com.yasinskyi.firebase.edu.view.impl.fragment.login.AuthFragment">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/toolbar_default" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginTitle"
        style="@style/Wrap"
        android:text="@string/login"
        android:textColor="@color/grey_500"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signInFieldEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signInFieldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInFieldEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        style="@style/Wrap.Width0"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInFieldPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/signUpText"
        style="@style/Wrap"
        android:text="@string/not_registered_yet"
        android:layout_marginTop="@dimen/wide_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        style="@style/Wrap.Width0"
        android:layout_marginStart="@dimen/extra_large_margin"
        android:layout_marginEnd="@dimen/extra_large_margin"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restorePasswordText"
        style="@style/Wrap"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/wide_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restorePasswordButton"
        style="@style/Wrap.Width0"
        android:layout_marginStart="@dimen/extra_large_margin"
        android:layout_marginEnd="@dimen/extra_large_margin"
        android:text="@string/restore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restorePasswordText" />

</androidx.constraintlayout.widget.ConstraintLayout>
