<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/restorePasswordFragmentLayout"
    style="@style/MatchParent"
    android:backgroundTint="@color/grey_100"
    tools:context="com.yasinskyi.firebase.edu.view.impl.fragment.login.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Wide">

        <include
            android:id="@+id/appBarLayout"
            layout="@layout/toolbar_default" />

        <ImageView
            android:id="@+id/selectedImage"
            android:layout_width="@dimen/medium_image_size"
            android:layout_height="@dimen/medium_image_size"
            android:layout_marginTop="@dimen/wide_margin"
            android:backgroundTint="@color/grey_500"
            android:foreground="?android:attr/selectableItemBackground"
            android:contentDescription="@string/select_photo"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_select_image" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/signUpFieldUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true"
            app:helperText="@string/username_input_helper_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/selectedImage">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MatchParent"
            android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/signUpFieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:errorEnabled="true"
            app:helperText="@string/email_input_helper_text"
            app:layout_constraintTop_toBottomOf="@id/signUpFieldUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MatchParent"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/signUpFieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/signUpFieldEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/MatchParent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            style="@style/Wrap.Width0"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/signUpFieldPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

